[tool.poetry]
name = "gui4psdm"
version = "0.1.0"
description = ""
authors = ["Josias Grünig <josias.gruenig@tu-dortmund.de>",
            "Daniel Feismann <daniel.feismann@tu-dortmund.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^3.0.1"
folium = "^0.20.0"
dash = "^4.0.0"
dash-leaflet = "^1.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
jupyter = "~=1.1.0"
black = { extras = ["jupyter"], version = "~26.1.0" }
flake8 = "^7.3.0"
flake8-black = "^0.4.0"
flake8-isort = "^7.0.0"
pre-commit = "^4.5.1"
PyYAML = "^6.0"

[tool.isort]
profile= "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
